# client

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.cursor/rules/: context.mdc
src/: App.tsx  config.tsx  index.css  index.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/api/: auth.ts  index.ts  user.ts
src/components/: AuthComponent.tsx  ProtectedRoute.tsx  ShortcutBox.tsx
src/pages/: Home.tsx  HomePage.tsx  Login.tsx  LoginPage.tsx  Register.tsx  RegisterPage.tsx
src/store/: auth.ts  authStore.ts  globalStore.ts  userStore.ts
src/store/dao/: StoreDAO.ts
